.travis y build de gradle [#8]

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+version = '1.0'
+
+mainClassName = 'controlador.UBULog'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -27,4 +34,11 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+}
+
+run {	
+	standardInput = System.in
+}
+
+task release(dependsOn: ['test', 'run', 'javadoc']) {
 }
