--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: java
+sudo: false
+install: true
+addons:
+  sonarcloud:
+    organization: "trona85-github"
+    token:
+      secure: "fee58bfbe1fda446b537df1255ffd42822bfa22b"
 jdk:
   - oraclejdk8
+script:
+  - ./gradlew assemble
+  - ./gradlew sonarqube
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+    - '$HOME/.gradle'
+    - '.gradle'
