prueba de solución de error de travis con riok [#8] - solucionando posible error de travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 sudo: false
 install: true
+before_install:
+- sudo rm -vf /etc/apt/sources.list.d/*riak*
+- sudo apt-get update
+
 addons:
   sonarcloud:
     organization: "trona85-github"
