--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
 language: java
 sudo: false
 install: true
-before_install:
-- sudo rm -vf /etc/apt/sources.list.d/*riak*
-- sudo apt-get update
 
 addons:
   sonarcloud:
     organization: "trona85-github"
     token:
-      secure: "fee58bfbe1fda446b537df1255ffd42822bfa22b"
+      secure: "8adc4684193cfe1cd21a86da59c789a0bd515032"
+    branches:
+      - master
 jdk:
   - oraclejdk8
 script:
   - ./gradlew assemble
-  - ./gradlew sonarqube
+  - sonar-scanner
 cache:
   directories:
     - '$HOME/.m2/repository'
