--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@
  */
 
 // Apply the java plugin to add support for Java
+plugins {
+  id "org.sonarqube" version "2.5"
+}
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -28,6 +31,8 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'org.apache.httpcomponents:httpclient:4.5.3'
+    compile group: 'org.json', name: 'json', version: '20090211'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
