--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     compile group: 'org.json', name: 'json', version: '20090211'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
