--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,16 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'io.appium:java-client:4.1.2'
+    compile 'org.apache.httpcomponents:httpclient-cache:4.3.1'
+    compile 'org.apache.httpcomponents:httpcore-nio:4.4.5'
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.21'
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     compile group: 'org.json', name: 'json', version: '20090211'
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
-	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
 
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
