Actualizar configuracion log

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -4,3 +4,7 @@ log4j.rootLogger = DEBUG, Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.conversionPattern=%p %c	%M	%m %n
+
+log4j.logger.org.apache.http.impl.execchain.MainClientExec=OFF
+log4j.logger.org.apache.http.headers=OFF
+log4j.logger.org.apache.http.wire=OFF
